--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-express",
+  "name": "privacy-watermark-client",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
@@ -78,7 +78,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "typescript": "5.6.3",
-    "vite": "^5.4.19"
+    "vite": "^7.0.4"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
